--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="static/images/fav.png"/>
 
     <!--fonts-->
-    <link rel='stylesheet'
-          href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Source+Code+Pro:400,500,600,700'
-          type='text/css' media='screen'/>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Source+Code+Pro:400,500,600,700' type='text/css' media='screen'/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:900" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,600,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:600,500,400,300' rel='stylesheet' type='text/css'>
@@ -48,6 +46,7 @@
         <li><a class="navbar-ref" href="/">Home</a></li>
         <li><a class="navbar-ref" href="/about">About</a></li>
         <li><a class="navbar-ref" href="/contact">Contact</a></li>
+        <li><a class="navbar-ref" href="/blog">Blog</a></li>
     </ul>
 </div>
 {% block body %}
