--- a/templates/home.html
+++ b/templates/home.html
@@ -1,45 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Saurish Srivastava</title>
+{% extends "base.html" %}
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!--favicon-->
-    <link rel="shortcut icon" type="image/png" href="static/images/fav.png"/>
-
-    <!--fonts-->
-    <link rel='stylesheet'
-          href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Source+Code+Pro:400,500,600,700'
-          type='text/css' media='screen'/>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:900" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Poppins:400,600,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Work+Sans:600,500,400,300' rel='stylesheet' type='text/css'>
-
-    <link type="text/css" rel="stylesheet" href="/static/css/base.css">
-
-    <!--tracking-->
-    <script>
-        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-        ga('create', '', 'auto');
-
-        // Replace the following lines with the plugins you want to use.
-        ga('require', 'eventTracker');
-        ga('require', 'outboundLinkTracker');
-        ga('require', 'urlChangeTracker');
-        ga('require', 'cleanUrlTracker');
-        ga('require', 'maxScrollTracker');
-        ga('require', 'impressionTracker');
-        ga('require', 'outboundLinkTracker');
-        ga('require', 'pageVisibilityTracker');
-        // ...
-        ga('send', 'pageview');
-    </script>
-    <script async src="https://www.google-analytics.com/analytics.js"></script>
-    <script async src="static/js/autotrack.js"></script>
-
-    
+{% block head %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
@@ -48,20 +9,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <script src='https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js'></script>
 
-<link type="text/css" rel="stylesheet" href="/static/css/home.css">
-<script type="text/javascript" src="/static/js/home.js"></script>
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename = 'css/home.css') }}">
+<script type="text/javascript" src="{{ url_for('static', filename = 'js/home.js') }}"></script>
+{% endblock %}
 
-</head>
-<body>
-<div class="navbar-ul">
-    <ul id="navbar-list" class="list-inline">
-        <li><a class="navbar-ref" href="/">Home</a></li>
-        <li><a class="navbar-ref" href="/about">About</a></li>
-        <li><a class="navbar-ref" href="/contact">Contact</a></li>
-        <li><a class="navbar-ref" href="/blog">Blog</a></li>
-    </ul>
-</div>
-
+{% block body %}
 <div class="container">
     <div class="wrapper fixed-wrapper">
         <section id="terminal">
@@ -106,6 +58,4 @@
         </div>
     </div>
 </div>
-
-</body>
-</html>
+{% endblock %}
