--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,11 +38,11 @@ body {
 }
 
 a::selection,
-span::selection {
+::selection {
   background: #ffb7b7; /* WebKit/Blink Browsers */
 }
 
 a::selection,
-span::-moz-selection {
+::-moz-selection {
   background: #ffb7b7; /* Gecko Browsers */
 }
